real world impact

--- a/index.html
+++ b/index.html
@@ -230,9 +230,59 @@
                 </div>
             </div>
             <div class="real-impact">
-                <h3>Real World Impact</h3>
-                <div class="impact-stats">
-                    <!-- Add your impact statistics here -->
+                <h3>Real-World Impact</h3>
+                <div class="impact-grid">
+                    <div class="impact-card environmental">
+                        <span class="impact-emoji">🌍</span>
+                        <h4>Environmental Waste Crisis</h4>
+                        <ul class="impact-list">
+                            <li>Millions of tons of reusable furniture end up in landfills yearly</li>
+                            <li>Large furniture items take years to decompose</li>
+                            <li>Cities spend thousands on removing dumped furniture</li>
+                        </ul>
+                    </div>
+
+                    <div class="impact-card community">
+                        <span class="impact-emoji">👥</span>
+                        <h4>Unmet Needs in Communities</h4>
+                        <ul class="impact-list">
+                            <li>Low-income families struggle to afford furniture</li>
+                            <li>Lack of organized donation systems</li>
+                            <li>Thrift stores lack inventory due to transport issues</li>
+                        </ul>
+                    </div>
+
+                    <div class="impact-card city">
+                        <span class="impact-emoji">🏙️</span>
+                        <h4>Cluttered Public Spaces</h4>
+                        <ul class="impact-list">
+                            <li>Abandoned furniture creates unmaintained neighborhoods</li>
+                            <li>Cities spend taxpayer money on furniture disposal</li>
+                            <li>Illegal dumping creates safety hazards</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="positive-change">
+                    <h4>The Positive Change "Share and Care" Brings</h4>
+                    <div class="change-grid">
+                        <div class="change-item">
+                            <span class="check-icon">✔️</span>
+                            <p>Less waste through furniture reuse</p>
+                        </div>
+                        <div class="change-item">
+                            <span class="check-icon">✔️</span>
+                            <p>Improved accessibility for low-income families</p>
+                        </div>
+                        <div class="change-item">
+                            <span class="check-icon">✔️</span>
+                            <p>Cleaner city streets and sidewalks</p>
+                        </div>
+                        <div class="change-item">
+                            <span class="check-icon">✔️</span>
+                            <p>Reduced waste management costs</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
